--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,7 @@
     /*section del index*/
 
     .galeria {
+        margin-bottom: 30px;
         display: grid;
         grid-template-rows: 140px 200px 200px;
         grid-template-columns: 1fr 1fr;
