--- a/style/style.css
+++ b/style/style.css
@@ -247,7 +247,7 @@
         height: 360px;
     }
 
-
+}
 /*este @media screen and (min-width:426px) lo utilicé para que los componentes y sus medidas me quedaran de forma ordenada en la versión de desktop,
     no encontré otra forma de solucionarlo*/
 
