--- a/style/style.css
+++ b/style/style.css
@@ -246,9 +246,7 @@
     footer {
         height: 360px;
     }
-    
-    
-}}
+}
 
 
 /*este @media screen and (min-width:426px) lo utilicé para que los componentes y sus medidas me quedaran de forma ordenada en la versión de desktop,
